working dynamic button lambda select

--- a/icon_resources.qrc
+++ b/icon_resources.qrc
@@ -1,2 +1,10 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/">
+        <file>about_dialog.cpp</file>
+        <file>about_dialog.h</file>
+        <file>main.cpp</file>
+        <file>mainwindow.cpp</file>
+        <file>mainwindow.h</file>
+        <file>icons/lime.png</file>
+    </qresource>
+</RCC>
