--- a/icons.qrc
+++ b/icons.qrc
@@ -1,2 +1,5 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/">
+        <file>icons/lime.png</file>
+    </qresource>
+</RCC>
